Fri Apr 28 17:51:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added configure checking for getopt.h

Fri Apr 28 17:17:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add insure and purify configure options.

Fri Apr 28 16:22:56 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added checking for -lsocket on Solaris

Fri Apr 28 10:27:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgServer exits when it receives "QUIT"

	* ProgClient sends "QUIT" before exiting.

Thu Apr 20 18:00:36 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* StatsSource now has two varients - LocalStatsSource and
	  NetworkStatsSource
	
	* Some changes to the prototype protocol

	* ProgClient and ProgServer use OmLineBuf to share code

	* Some code moved around

Thu Apr 20 17:52:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New OmLineBuf object to handle line buffering over a connection

Thu Apr 20 15:38:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.1.3

Thu Apr 20 14:37:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed main part of bug with MSet docid merging in MultiMatch.
	  Will still fail to do collapse operation across multiple databases.

Thu Apr 20 13:20:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed some memory leaks.

Thu Apr 20 13:06:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a test for multimatch's document ID merging to apitest

Thu Apr 20 12:53:12 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added some memory leak checking in the test suite driver.

Thu Apr 20 12:06:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Stopped SleepyDatabase aborting nastily when an attempt to
	  open in a non existent directory is performed.

Wed Apr 19 18:45:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
