@@ -1,3 +1,9 @@
+Fri Apr 28 18:55:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Begun process of making OmDatabaseGroup use reference counted
+	  databases, rather than just the parameters, so that we can add
+	  opened database objects to a database group.
+
 Fri Apr 28 17:51:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added configure checking for getopt.h
